fix: position summary align

--- a/src/app/[ticker]/PositionSummary/PositionSummary.module.css
+++ b/src/app/[ticker]/PositionSummary/PositionSummary.module.css
@@ -28,7 +28,7 @@
 .metric {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
 }
 
